@@ -5,6 +5,7 @@ UNRELEASED CHANGES:
 * Fix translation not being displayed correctly on Subscription page
 * Add ability to define custom activity types and activity type categories through the API and the UI
 * Add the TrimStrings middleware to trim all inputs
+* Call to monica:ping when updating instance
 
 RELEASED VERSIONS:
 
